--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Randi | a fun random number generator!</title>
+    <title>Randi | a simple and small random number generator!</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' href='reset.css' />
     <link rel='stylesheet' href='style.css' />
