--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- top part -->
     <div class="top">
       <h1 class="title">Randi</h1>
-      <p class="sub-title">an easy random number generator</p class="sub-title">
+      <p class="sub-title">an simple and small random number generator</p class="sub-title">
     </div>
 
     <!-- middle part -->
